# soundux-remote

./: .gitignore  CMakeLists.txt  README.md  package-lock.json
.github/workflows/: build_flatpak.yml  compile_linux.yml  compile_windows.yml  linux_debug.yml  upload_binaries_to_draft.yml  upload_full_src.yml  windows_debug.yml
deployment/debian/soundux/DEBIAN/: control
deployment/innosetup/: Soundux.iss
deployment/rpm/: soundux.spec
src/: main.cpp
src/core/config/: config.cpp
src/core/global/: globals.hpp
src/core/objects/: settings.hpp
src/helper/audio/windows/: winsound.cpp
src/helper/json/: bindings.hpp
src/helper/systeminfo/: systeminfo.hpp
src/helper/systeminfo/windows/: windows-info.cpp
src/helper/webserver/: webserver.cpp  webserver.hpp
src/helper/webserver/html/: index.html  login.html  manifest.json
src/helper/webserver/html/css/: styles.css
src/helper/webserver/html/js/: app.js  dragDrop.js  editMode.js  fullscreen.js  layout.js  persistence.js  screen-wake.js  search.js  service-worker.js  sound-settings.js  tabs.js  tutorial.js
src/helper/ytdl/: youtube-dl.cpp
src/ui/impl/webview/: webview.cpp  webview.hpp
